--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <ul class="navbar">
                         <li class="active"><a href="#">Início</a></li>
                         <li><a href="#about">Sobre Nós</a></li>
-                        <li><a href="simulador.html">Simulador</a></li>
-                        <li><a href="login.html">Login</a></li>
-                        <li><a href="cadastro.html">Cadastro</a></li>
-                        <li><a href="suporte.html">Suporte</a></li>
+                        <li><a href="./public/simulador.html">Simulador</a></li>
+                        <li><a href="./public/login.html">Login</a></li>
+                        <li><a href="./public/cadastro.html">Cadastro</a></li>
+                        <li><a href="./public/suporte.html">Suporte</a></li>
                     </ul>
                 </div>
             </div>
