--- a/public/login.html
+++ b/public/login.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
-    <script src="./assets/js/funcoes.js"></script>
-
-    <link rel="icon" href="./assets/icon/favicon.ico">
-    <link rel="stylesheet" href="./css/style.css">
+    <script src="../assets/js/funcoes.js"></script>
+    
+    
+    <link rel="icon" href="../assets/icon/favicon.ico">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
@@ -20,9 +21,9 @@
 
     <div class="header">
         <div class="container2">
-            <img src="./assets/imgs/logo2-semfundopng.png" alt="">
+            <img src="../assets/imgs/logo2-semfundopng.png" alt="">
             <ul class="navbar">
-                <li><a href="index.html">Início</a></li>
+                <li><a href="../index.html">Início</a></li>
                 <li><a href="sobre.html">Sobre Nós</a></li>
                 <li><a href="simulador.html">Simulador</a></li>
                 <li class="active"><a href="">Login</a></li>
