--- a/public/simulador.html
+++ b/public/simulador.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulação</title>
-    <script src="./assets/js/funcoes.js"></script>
+    <script src="../assets/js/funcoes.js"></script>
     
-    <link rel="icon" href="./assets/icon/favicon.ico">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="../assets/icon/favicon.ico">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -19,9 +19,9 @@
 <body>
     <div class="header">
         <div class="container2">
-            <img src="./assets/imgs/logo2-semfundopng.png" alt="">
+            <img src="../assets/imgs/logo2-semfundopng.png" alt="">
             <ul class="navbar">
-                <li><a href="index.html">Início</a></li>
+                <li><a href="../index.html">Início</a></li>
                 <li><a href="sobre.html">Sobre Nós</a></li>
                 <li class="active"><a href="">Simulador</a></li>
                 <li><a href="login.html">Login</a></li>
