--- a/public/sobre.html
+++ b/public/sobre.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nós</title>
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -19,9 +19,9 @@
     <div class="fixed">
     <div class="header-about">
         <div class="container-about">
-            <img src="./assets/imgs/logo2-semfundopng.png" alt="">
+            <img src="../assets/imgs/logo2-semfundopng.png" alt="">
             <ul class="navbar-about">
-                <li><a href="index.html">Início</a></li>
+                <li><a href="../index.html">Início</a></li>
                 <li class="active"><a href="sobre.html">Sobre Nós</a></li>
                 <li><a href="simulador.html">Simulador</a></li>
                 <li><a href="login.html">Login</a></li>
@@ -36,7 +36,7 @@
 <div class="about">
     <p class="message2">
         Sobre Nós
-        <img src="./assets/imgs/vinho-removebg-preview.png" alt="">
+        <img src="../assets/imgs/vinho-removebg-preview.png" alt="">
 
         <span>
 
