--- a/public/suporte.html
+++ b/public/suporte.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela final</title>
     
-    <link rel="icon" href="./assets/icon/favicon.ico">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="../assets/icon/favicon.ico">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
 
@@ -37,9 +37,9 @@
             <div class="fixed">
                 <div class="header">
                         <div class="container2">
-                            <img src="./assets/imgs/logo2-semfundopng.png" alt="">
+                            <img src="../assets/imgs/logo2-semfundopng.png" alt="">
                             <ul class="navbar">
-                                <li><a href="index.html">Início</a></li>
+                                <li><a href="../index.html">Início</a></li>
                                 <li><a href="sobre.html">Sobre Nós</a></li>
                                 <li><a href="simulador.html">Simulador</a></li>
                                 <li><a href="login.html">Login</a></li>
