--- a/public/suporte.html
+++ b/public/suporte.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela final</title>
+    <title>Suporte</title>
     
     <link rel="icon" href="../assets/icon/favicon.ico">
     <link rel="stylesheet" href="../css/style.css">
@@ -57,7 +57,7 @@
                     <div><i class="fas fa-clock"></i>De segunda a sexta 09:45 até 15:45</div>
                 </div>
                 <div class="contato-form">
-                    <iframe width="560" height="580" src="https://app.pipefy.com/public/form/ukqKzX6b?embedded=true" frameborder="0"></iframe>
+                    <iframe class="col-form" width="560" height="580" src="https://app.pipefy.com/public/form/ukqKzX6b?embedded=true" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
